# substrait-python

./: .gitattributes  .gitignore  .gitmodules  README.md  buf.gen.yaml  build.py  environment.yml  gen_proto.sh  pyproject.toml
