[tool.poetry]
name = "pysubstrait"
version = "0.1.0"
description = "A python package for Substrait."
authors = ["Substrait contributors"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.poetry.dependencies]
python = "^3.8.1"
protobuf = "3.20.1"  # protobuf==3.20 C extensions aren't compatible with 3.19.4

[tool.poetry.group.dev.dependencies]
protoletariat = "^2.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"
substrait-validator = "^0.0.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
