[project]
name = "substrait"
version = "0.0.1"
description = "A python package for Substrait."
authors = [
    {name = "Substrait contributors", email = "substrait@googlegroups.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "protobuf == 3.20.1",  # protobuf==3.20 C extensions aren't compatible with 3.19.4
]

[project.optional-dependencies]
dev = [
    "protoletariat >= 2.0.0",
    "pytest >= 7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["substrait*"]
exclude = ["substrait.tests*"]
namespaces = false

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
