[project]
name = "substrait"
version = "0.0.1"
description = "A python package for Substrait."
authors = [
    {name = "Substrait contributors", email = "substrait@googlegroups.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "protobuf >= 3.20",
]

[tool.pytest.ini_options]
pythonpath = "src"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
